<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#6495ED"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgMenuLeft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_drawer" />

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="clip_horizontal|center"
            android:text="@string/languages"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:src="@drawable/iconshare" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff8dc" >

        <EditText
            android:id="@+id/edt_inp"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_toRightOf="@+id/icon_down"
            android:ems="10"
            android:hint="@string/txthint" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/btn_search"
            style="@style/button_text"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_search"
            android:layout_centerVertical="true"
            android:text="@string/txttitle" />

        <ImageView
            android:id="@+id/icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="4dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/icon_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_google"
            android:src="@drawable/iconmini" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>